2003-09-09 John Fleck <jfleck@inkstain.net>
	 
	* rnthanks.xml
	added Paolo's gedit thanks

2003-09-08 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	comment out "known issues" section 'cause it
	doesn't say anything yet

2003-09-08  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Minor fix. Corrected a number of Azerbaijani
	speakers.

2003-09-08  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Added Albanian to supported languages (28 now).

2003-09-07 John Fleck <jfleck@inkstain.net>

	* rnplatform.xml
	more platform additions

2003-09-07 John Fleck <jfleck@inkstain.net>

	* rncontrolcenter.xml
	* rnnewmaintainers.xml
	* rnthanks
	add fontilus, more thanks, and how could I have
	forgotten shaunm in the new maintainers list!
	
2003-09-08  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Corrected number of Portuguese speakers.

2003-09-06 John Fleck <jfleck@inkstain.net>

        * release-notes.xml
	* rngames.xml
	* rnthanks.xml
	add GNOME games schtick
	
2003-09-06 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	* rnapplets.xml
	* rncontrolcenter.xml
	* rndesktop.xml
	* rnthanks.xml
	many more minor edits

2003-09-06 John Fleck <jfleck@inkstain.net>

	
	* release-notes.xml
	include new applets section
	* rnapplets.xml
	add applets discussion
	* rnnewmaintainers.xml
	add Luis' new maintainers list
	* rnplatform.xml
	start discussion of developer-visible improvements
	* rnthanks.xml
	thanks buckets o' people

2003-09-06  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Added "Slovak" (27 supported languages).
	Typo (s/Wels/Welsh/). 
	Added number of speakers for each language (according to
	discussions on gnome-i18n and ethnologue.com).
	Replaced "American English" with "English" (back again).
	
2003-09-06 John Fleck <jfleck@inkstain.net>

	* rnplatform.xml
	adding first bits for platform improvements section

2003-09-06 John Fleck <jfleck@inkstain.net>
      
	* release-notes.xml
	* rnepiphany.xml
        * rni18n.xml
        * rnnewmaintainers.xml