@@ -146,6 +146,11 @@
       </listitem>
       <listitem>
 	<para>
+	  Romanian (26 million)
+	</para>
+      </listitem>
+      <listitem>
+	<para>
 	  Serbian (10 million)
 	</para>
       </listitem>
