@@ -1,3 +1,7 @@
+2003-09-09  Danilo Šegan  <dsegan@gmx.net>
+
+	* rni18n.xml: Added Romanian to the supported languages.
+
 2003-09-09 John Fleck <jfleck@inkstain.net>
 	 
 	* rnthanks.xml
